--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FORM</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
+
+
 <body>
     <h1>welcome to my website</h1>
     <form action="" method="post">
         <label for="">my name</label> 
         <input type="text">
     </form>
-    
+    <a href="./profile.html"></a>
 </body>
 </html>
